# ml-animations

./: .gitignore  404.html  AGENTS.md  README.md  index.html  package-lock.json
ab-testing-foundations-animation/: index.html
actor-critic-animation/: index.html
agentic-coding-systems-animation/: index.html
animation/: layer-normalization
assets/: ActivePoints-7rjHgvc3.js  ActivePoints-B5-7wEK5.js  ActivePoints-BBcMh5l1.js  ActivePoints-BWf6rnyu.js  ActivePoints-BcOJxYvP.js  ActivePoints-Brn50f14.js  ActivePoints-CGA1AYx6.js  ActivePoints-CMMyA4WQ.js  ActivePoints-CUePYX-p.js  ActivePoints-Ck2UrnqO.js  ActivePoints-DAXLG5Ym.js  ActivePoints-DxWVwaXA.js  ActivePoints-Q1w_GcgJ.js  ActiveShapeUtils-BHWTi6ne.js  ActiveShapeUtils-B_U5JxtX.js  ActiveShapeUtils-C-PaSqlm.js  ActiveShapeUtils-CG5WTXBz.js  ActiveShapeUtils-CQdK4XeW.js  ActiveShapeUtils-CXzvfFi1.js  ActiveShapeUtils-CsT6DdaU.js  ActiveShapeUtils-D6Vk06Pv.js  ActiveShapeUtils-DIM-XcTG.js  ActiveShapeUtils-DOx4fii1.js  ActiveShapeUtils-DY4jLeik.js  ActiveShapeUtils-DqdMQ2JR.js  ActiveShapeUtils-Uti1THCm.js  AgentPanel-BM4fYRzb.js  AgentPanel-B_Sgytbw.js  AgentPanel-B_rcD_Jc.js  AgentPanel-BhBrT1-T.js  AgentPanel-BiaH2fHJ.js  AgentPanel-Bo2zC3pu.js  AgentPanel-C1KBBJwk.js  AgentPanel-CSLWFgum.js  AgentPanel-Cjabwjvs.js  AgentPanel-DAkz_AA2.js  AgentPanel-DEWw0NRS.js  AgentPanel-DPyRUZg3.js  AgentPanel-D_vsbhHX.js  AgentPanel-DdRgXfsn.js  (+11169 more)
attention-masks-animation/: index.html
attention-mechanism-animation/: index.html  package-lock.json  package.json
bag-of-words-animation/: index.html  package-lock.json  package.json
bayes-rule-ml-animation/: index.html
bert-animation/: index.html
bias-variance-tradeoff-animation/: index.html
blog/: hugo.toml
bloom-filter-animation/: index.html  package-lock.json  package.json
calibration-animation/: index.html
causal-graphs-dags-animation/: index.html
change-of-basis-animation/: index.html  package-lock.json  package.json  tailwind.config.js
classification-metrics-animation/: index.html
classifier-free-guidance-animation/: index.html
clip-encoder-animation/: index.html
clip-text-encoder-animation/: index.html  package-lock.json  package.json
coconut-latent-reasoning-animation/: index.html
computation-graph-backprop-animation/: index.html
condition-number-animation/: index.html  package-lock.json  package.json  tailwind.config.js
conditional-probability-animation/: index.html
confounding-simpsons-paradox-animation/: index.html
conv-relu-animation/: index.html  package-lock.json  package.json
conv2d-animation/: index.html
cosine-similarity-animation/: index.html
cross-entropy-animation/: README.md  index.html  package.json
cross-validation-animation/: index.html
cuped-variance-reduction-animation/: index.html
dapo-reasoning-rl-animation/: index.html
data-engineering-for-ml-track-animation/: index.html
data-leakage-deep-dive-animation/: index.html
determinant-volume-animation/: index.html  package-lock.json  package.json  tailwind.config.js
diffusion-basics-animation/: index.html
mini-coconut/: Cargo.toml  README.md
mini-coconut/exercises/: 01_mode_switch.rs  02_latent_feedback.rs  03_masked_loss.rs  04_curriculum_schedule.rs  05_pause_vs_continuous.rs  06_branch_entropy.rs  07_delayed_commitment.rs  08_latent_perturbation.rs  09_token_budget.rs  10_probe_nearest_tokens.rs
mini-dapo/: Cargo.toml  README.md
mini-dapo/exercises/: 01_group_accuracy.rs  02_dynamic_sampling.rs  03_group_advantage.rs  04_clip_higher.rs  05_token_level_loss.rs  06_overlong_reward.rs  07_entropy_collapse.rs  08_effective_batch.rs  09_dapo_objective.rs  10_training_dashboard.rs
mini-diffusion-python/: README.md  pyproject.toml
mini-diffusion-python/mini_diffusion/: __init__.py  demo.py  layers.py  sampler.py  scheduler.py  tensor.py  unet.py
mini-eagle/: Cargo.toml  README.md
mini-eagle/exercises/: 01_accept_prefix.rs  02_speculative_round.rs  03_attention_drift.rs  04_rms_norm.rs  05_feature_fusion.rs  06_post_norm_feedback.rs  07_acceptance_length_sim.rs
mini-eagle/tests/: README.md
mini-grpo/: Cargo.toml  README.md
mini-grpo/exercises/: 01_group_mean.rs  02_group_advantage.rs  03_reward_correctness.rs  04_format_reward.rs  05_policy_ratio.rs  06_clip_objective.rs  07_kl_penalty.rs  08_grpo_update_signal.rs  09_batch_filtering.rs  10_distillation_dataset.rs
mini-markov-python/: .gitignore  README.md  pyproject.toml
mini-markov-python/mini_markov/: __init__.py  chain.py  demo_music.py  demo_text.py  demo_weather.py  state.py  text.py
mini-markov-python/tests/: test_markov.py
mini-mla/: Cargo.toml  README.md
mini-mla/exercises/: 01_kv_cache_size.rs  02_mha_gqa_cache.rs  03_latent_cache.rs  04_down_up_projection.rs  05_absorb_projection.rs  06_rope_non_commute.rs  07_decoupled_rope_cache.rs  08_gqa_repetition.rs  09_low_rank_factorization.rs  10_strategy_tradeoff.rs
mini-mla/tests/: README.md
mini-native-sparse-attention/: Cargo.toml  README.md
mini-native-sparse-attention/exercises/: 01_blockify.rs  02_sliding_window.rs  03_compress_blocks.rs  04_block_scores.rs  05_topk_blocks.rs  06_selected_tokens.rs  07_gated_merge.rs  08_gqa_shared_selection.rs  09_memory_access.rs  10_nsa_budget.rs
mini-nn-python/: README.md  demo_xor.py  pyproject.toml
mini-nn-python/mini_nn/: __init__.py  activation.py  layer.py  loss.py  network.py  optimizer.py  tensor.py  trainer.py
mini-spec-sparse/: Cargo.toml  README.md
mini-spec-sparse/exercises/: 01_accept_prefix.rs  02_sparse_ratio.rs  03_critical_kv_scores.rs  04_collect_two_query.rs  05_block_overlap.rs  06_exact_merged_schedule.rs  07_shared_index.rs  08_refresh_reuse.rs  09_strategy_planner.rs
mini-spec-sparse/tests/: README.md
mini-turboquant/: Cargo.toml  README.md
mini-turboquant/exercises/: 01_kv_cache_size.rs  02_uniform_quantization.rs  03_dot_product_error.rs  04_random_rotation.rs  05_mse_vs_inner_product.rs  06_residual_correction.rs  07_outlier_channels.rs  08_attention_topk_agreement.rs  09_compression_tradeoff.rs
mini-turboquant/tests/: README.md
(+1373 files in other folders)
