[package]
name = "mini-coconut"
version = "0.1.0"
edition = "2021"
description = "Rustlings-style exercises for Coconut continuous latent reasoning"
authors = ["Daniel Sobrado"]

[[bin]]
name = "01_mode_switch"
path = "exercises/01_mode_switch.rs"

[[bin]]
name = "02_latent_feedback"
path = "exercises/02_latent_feedback.rs"

[[bin]]
name = "03_masked_loss"
path = "exercises/03_masked_loss.rs"

[[bin]]
name = "04_curriculum_schedule"
path = "exercises/04_curriculum_schedule.rs"

[[bin]]
name = "05_pause_vs_continuous"
path = "exercises/05_pause_vs_continuous.rs"

[[bin]]
name = "06_branch_entropy"
path = "exercises/06_branch_entropy.rs"

[[bin]]
name = "07_delayed_commitment"
path = "exercises/07_delayed_commitment.rs"

[[bin]]
name = "08_latent_perturbation"
path = "exercises/08_latent_perturbation.rs"

[[bin]]
name = "09_token_budget"
path = "exercises/09_token_budget.rs"

[[bin]]
name = "10_probe_nearest_tokens"
path = "exercises/10_probe_nearest_tokens.rs"
