[package]
name = "mini-dapo"
version = "0.1.0"
edition = "2021"
description = "Rustlings-style exercises for DAPO reasoning RL"
authors = ["Daniel Sobrado"]

[[bin]]
name = "01_group_accuracy"
path = "exercises/01_group_accuracy.rs"

[[bin]]
name = "02_dynamic_sampling"
path = "exercises/02_dynamic_sampling.rs"

[[bin]]
name = "03_group_advantage"
path = "exercises/03_group_advantage.rs"

[[bin]]
name = "04_clip_higher"
path = "exercises/04_clip_higher.rs"

[[bin]]
name = "05_token_level_loss"
path = "exercises/05_token_level_loss.rs"

[[bin]]
name = "06_overlong_reward"
path = "exercises/06_overlong_reward.rs"

[[bin]]
name = "07_entropy_collapse"
path = "exercises/07_entropy_collapse.rs"

[[bin]]
name = "08_effective_batch"
path = "exercises/08_effective_batch.rs"

[[bin]]
name = "09_dapo_objective"
path = "exercises/09_dapo_objective.rs"

[[bin]]
name = "10_training_dashboard"
path = "exercises/10_training_dashboard.rs"
