[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-diffusion"
version = "0.1.0"
description = "A minimal Python implementation of diffusion models for educational purposes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
mini-diffusion-demo = "mini_diffusion.demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mini_diffusion*"]
