[package]
name = "mini-grpo"
version = "0.1.0"
edition = "2021"
description = "Rustlings-style exercises for GRPO reasoning RL"
authors = ["Daniel Sobrado"]

[[bin]]
name = "01_group_mean"
path = "exercises/01_group_mean.rs"

[[bin]]
name = "02_group_advantage"
path = "exercises/02_group_advantage.rs"

[[bin]]
name = "03_reward_correctness"
path = "exercises/03_reward_correctness.rs"

[[bin]]
name = "04_format_reward"
path = "exercises/04_format_reward.rs"

[[bin]]
name = "05_policy_ratio"
path = "exercises/05_policy_ratio.rs"

[[bin]]
name = "06_clip_objective"
path = "exercises/06_clip_objective.rs"

[[bin]]
name = "07_kl_penalty"
path = "exercises/07_kl_penalty.rs"

[[bin]]
name = "08_grpo_update_signal"
path = "exercises/08_grpo_update_signal.rs"

[[bin]]
name = "09_batch_filtering"
path = "exercises/09_batch_filtering.rs"

[[bin]]
name = "10_distillation_dataset"
path = "exercises/10_distillation_dataset.rs"
