[project]
name = "mini-markov-python"
version = "1.0.0"
description = "Markov Chain from scratch in Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
demo-text = "mini_markov.demo_text:main"
demo-weather = "mini_markov.demo_weather:main"
demo-music = "mini_markov.demo_music:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
